--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="try__6">
-<div class="container-gallery container ">
+<div class="container-gallery container">
        <!-- <picture>-->
             <!-- <source  srcset="images/mobile/Display-/mobi-gallery--mini.jpg 1x, images/mobile/Display-/mobi-gallery-x2-mini.jpg 2x" media="(max-width: 767px)"> -->
             <!-- <source  srcset=" 1x, -mini.jpg 2x" media="(max-width: 1199px)">
@@ -8,26 +8,26 @@
         </picture> -->
        
 
-        <div class="gallery-group">
-
+    <div class="gallery-group">
+        
             <div class="gallery-group__item">
-                <picture>
+                <picture>   
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-719-2-min.jpg 1х"  media="(max-width: 1199px)">
+                    <source  srcset="./images/gallery/gallery-719-2-min.jpg 1х" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                    <img src="./images/gallery/gallery-719-2-min.jpg" width="599" alt="галерея" class="gallery-main-img1">
+                    <img src="./images/gallery/gallery-719-2-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
                 </picture>
             </div>
-            
+      
             <div class="gallery-group__item">
                 <picture>
-                    <!--<source  srcset="" media="(max-width: 767px)">--> 
-                    <source  srcset="./images/gallery/gallery-600-min.jpg 1х"  media="(max-width: 1199px)">
+                    <!-- <source  srcset="" media="(max-width: 767px)"> --> 
+                    <source  srcset="./images/gallery/gallery-600-min.jpg 1х" media="(max-width: 1199px)">
                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                     <img src="./images/gallery/gallery-600-min.jpg" width="600" alt="галерея" class="gallery-main-img1">
                 </picture>
             </div>
-            
+
             <div class="gallery-group__item">
                 <picture>
                     <!--<source  srcset="" media="(max-width: 767px)">--> 
@@ -40,7 +40,7 @@
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-719-1-min.jpg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-1-min.jpg 1х" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                 <img src="./images/gallery/gallery-719-1-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
@@ -49,40 +49,40 @@
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-569-min.jpg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/1585472821_15-new.jpg 1х" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                <img src="./images/gallery/gallery-569-min.jpg" width="1438" alt="галерея" class="gallery-main-img img-scale">
+                <img src="./images/gallery/1585472821_15-new.jpg" width="502" alt="галерея" class="gallery-main-img1">
             </picture>
           </div>
 
           <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-719-3-min.jpg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-3-min.jpg 1х" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                 <img src="./images/gallery/gallery-719-3-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
         </div>
           
         <div class="gallery-group__item">
-            <picture>
-                <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-719-4-min.jpg 1х"  media="(max-width: 1199px)">
-               <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                <img src="./images/gallery/gallery-719-4-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
-            </picture>
-        </div>
+             <picture>
+                 <!--<source  srcset="" media="(max-width: 767px)">--> 
+                 <source  srcset="./images/gallery/gallery-tab-700-(11)new.jpg 1х" media="(max-width: 1199px)">
+                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                 <img src="./images/gallery/gallery-tab-700-(11)new.jpg" width="700" alt="галерея" class="gallery-main-img1">
+             </picture>
+         </div>
             
         <div class="gallery-group__item">
             <picture>
                 <!--<source  srcset="" media="(max-width: 767px)">--> 
-                <source  srcset="./images/gallery/gallery-719-5-min.jpg 1х"  media="(max-width: 1199px)">
+                <source  srcset="./images/gallery/gallery-719-5-min.jpg 1х" media="(max-width: 1199px)">
                <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
                 <img src="./images/gallery/gallery-719-5-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
             </picture>
         </div>
         
-          <div class="gallery-group__item">
+          <div class="gallery-group__item ">
               <picture>
                   <!--<source  srcset="" media="(max-width: 767px)">--> 
                   <source  srcset="./images/gallery/gallery-719-6-min.jpg 1х"  media="(max-width: 1199px)">
@@ -92,31 +92,128 @@
            </div>
 
              <div class="gallery-group__item">
-                  <picture>
-                      <!--<source  srcset="" media="(max-width: 767px)">--> 
-                      <source  srcset="./images/gallery/gallery-719-min.jpg 1х" media="(max-width: 1199px)">
-                     <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                      <img src="./images/gallery/gallery-719-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
-                  </picture>
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-810-min.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-810-min.jpg" width="810" alt="галерея" class="gallery-main-img1">
+                </picture>
               </div>    
-            
+      
              <div class="gallery-group__item">
-                 <picture>
-                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                     <source  srcset="./images/gallery/gallery-tab-463-min.jpg 1х"  media="(max-width: 1199px)">
-                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                     <img src="./images/gallery/gallery-tab-463-min.jpg" width="463" alt="галерея" class="gallery-main-img1">
-                 </picture>
-             </div>
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-640-(6)-new.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-640-(6)-new.jpg" width="771" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+
+            <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-640-2-min.jpg 1х"  media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-640-2-min.jpg" width="463" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+            <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-800-min.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-800-min.jpg" width="800" alt="галерея" class="gallery-main-img1">
+                </picture>
+              </div>    
+      
+             <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-771-(11)-new.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-771-(11)-new.jpg" width="771" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+
+            <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-463-min.jpg 1х"  media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-463-min.jpg" width="463" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+            <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-640-min.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-640-min.jpg" width="640" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+
+            <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-493-min.jpg 1х"  media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-493-min.jpg" width="493" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+            <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-719-4-min.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-719-4-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
+                </picture>
+              </div>    
+      
+             <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-771-(11)-new.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-771-(11)-new.jpg" width="771" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+            <div class="gallery-group__item">
+                <picture>   
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-719-2-min.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-719-2-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+      
+            <div class="gallery-group__item">
+                <picture>
+                    <!-- <source  srcset="" media="(max-width: 767px)"> --> 
+                    <source  srcset="./images/gallery/gallery-600-min.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-600-min.jpg" width="600" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+
+            <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-860.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-860.jpg" width="860" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div> 
+
+          <div class="gallery-group__item">
+            <picture>
+                <!--<source  srcset="" media="(max-width: 767px)">--> 
+                <source  srcset="./images/gallery/gallery-719-1-min.jpg 1х" media="(max-width: 1199px)">
+               <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                <img src="./images/gallery/gallery-719-1-min.jpg" width="719" alt="галерея" class="gallery-main-img1">
+            </picture>
+          </div>
+  
    
-             <div class="gallery-group__item">
-                 <picture>
-                     <!--<source  srcset="" media="(max-width: 767px)">--> 
-                     <source  srcset="./images/gallery/gallery-tab-493-min.jpg 1х"  media="(max-width: 1199px)">
-                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
-                     <img src="./images/gallery/gallery-tab-493-min.jpg" width="493" alt="галерея" class="gallery-main-img1">
-                 </picture>
-             </div>    
     </div>
 </div>
 </section>
