--- a/src/sass/_modal-footer.scss
+++ b/src/sass/_modal-footer.scss
@@ -3,6 +3,28 @@
     // justify-content:space-between;
 }
 
+.modal-form-modak__input {
+    display: block;
+    width: 100%;
+    border: var(--mn-modal-border-input);
+    box-sizing: border-box;
+    border-radius: 7px;
+    padding-top: 12px;
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-bottom: 12px;
+    margin-top: 4px;
+    cursor: pointer;
+    transition-property: border-color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
+    margin-bottom: 10px;
+    &:hover,
+    &:focus {
+      border-color: var(--accent-color-mod2);
+      fill: var(--accent-color-mod2);
+  }}
+
 .momble-mod{
     width: 50%;
 }
@@ -80,28 +102,24 @@
     }
 
 }
-
-
   
-  .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scaleX(1.1);
-  }
+.backdrop.is-hidden .modal {
+transform: translate(-50%, -50%) scaleX(1.1);
+}
    
+.form-modak .footer-btn {
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.15);
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    justify-content: center;
+    display: block;
+    border: 0;
 
-
-    .form-modak .footer-btn {
-        box-shadow: 0px 4px 4px rgba(0,0,0,0.15);
-        cursor: pointer;
-        margin-left: auto;
-        margin-right: auto;
-        align-items: center;
-        justify-content: center;
-        display: block;
-        border: 0;
-
-        &:hover,
-        &:focus { 
-            background-color: var(--main-title-color);
-            color: #ffffff;
-        }
+    &:hover,
+    &:focus { 
+        background-color: var(--main-title-color);
+        color: #ffffff;
     }
+}
