--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
 <div class="container footer__main">
     <div class="footer__blok-title">
         <p class="footer__paragraf">homemade ice cream made</p>
-        <h2 class="footer__title">with passion</h2>
+        <p class="footer__title">with passion</p>
     </div>
     <div class="footer__blok-list">
         <ul class="list footer__list">
