--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -31,7 +31,7 @@
     margin-left: 28px;
 }
 .footer__paragraf{
-    font-family: Titan One, Sans Serif;
+    font-family: Titan One;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -46,7 +46,7 @@
     }
 }
 .footer__title{
-    font-family: Titan One, Sans Serif;
+    font-family: Titan One;
     font-style: normal;
     font-weight: normal;
     font-size: 34px;
@@ -82,7 +82,7 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 .footer__tel{
-    font-family: DM Sans, Sans Serif;
+    font-family: DM Sans;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
@@ -95,7 +95,7 @@
     }
 }
 .footer__link-tel{
-    font-family: DM Sans, Sans Serif;
+    font-family: DM Sans;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
@@ -121,7 +121,7 @@
     padding-bottom: 25px;
 }
 .footer__quote__long{
-    font-family: DM Sans, Sans Serif;
+    font-family: DM Sans;
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
